# telco_api_bridge

./: .gitignore  Dockerfile  README.md  bridge.py  docker-compose.yml  pyproject.toml  server.py
backend/: .gitignore  README.md  fastmcp_client_test.py  fastmcp_server.py  http_api_server.py  mcp_client_bridge.py  pyproject.toml  requirements.txt  unified_mcp_server.py
backend/data/: products.json
frontend/: Dockerfile  README.md  next.config.js  package-lock.json  package.json
frontend-client/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend-client/src/: App.tsx  index.css
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: Footer.tsx  ProductsTable.tsx  SimpleChat.tsx
frontend/src/lib/: api.ts  store.ts  utils.ts
frontend/src/types/: chat.ts
leave_service/: Dockerfile  data.json  requirements.txt  server.py
loan_service/: Dockerfile  loan_data.json  requirements.txt  server.py
orchestrator/: main.py  requirements.txt
policy_service/: Dockerfile  requirements.txt  server.py
policy_service/chroma_db/: chroma.sqlite3
