[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slt-mcp-server"
version = "1.0.0"
description = "Standalone MCP Server for SLT Telecom API Bridge"
authors = [
    {name = "SLT Digital Lab"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "fastmcp>=2.14.3",
    "pydantic>=2.12.3",
    "uvicorn[standard]>=0.38.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
